--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -398,25 +398,25 @@ Button
 }
 .btn-primary{
     color: #fff;
-    background-color: #00a885;
+    background-color: #3C7B78;
     border:1px solid;
-    border-color: #00a885;
+    border-color: #3C7B78;
 
 }
 .btn-primary:hover{
     background-color: #eee;
     border-color: #eee;
-    color:#00a885;
+    color:#3C7B78;
 }
 
 .btn-default{
-    color: #fff;
+    color: #000000;
     background-color: transparent;
     border:1px solid;
     border-color: #b6b6b6;
 }
 .btn-default:hover{
-    color: #fff;
+    color: #FFFFFF !important;
     background-color: #00a885;
     border-color: #00a885;
 }
@@ -888,7 +888,9 @@ Nav Menu style
 /*
 Home Section style
 ==================*/
-
+.home2{
+    padding-top: 180px;
+}
 .home{
     background: url(../images/home-bg2.jpg) no-repeat scroll  center center;
     background-size: cover;
@@ -1131,7 +1133,7 @@ work Section style
 .main_product .port_overlay{
     width:100%;
     height: 100%;
-    background-color: rgba(0,168,133,0.60);
+    background-color: rgba(55, 53, 50, 0.5);
     position: absolute;
     left:0;
     top:0;
