--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -13,6 +13,10 @@ Author URI: http://www.xpeedstudio.com
     .business_item > h3{
         font-weight: bold;
     }
+    .roomy-30 {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
 }
 
 
@@ -52,6 +56,10 @@ Author URI: http://www.xpeedstudio.com
     }
     .business_item > h3{
         font-weight: bold;
+    }
+    .roomy-30 {
+        padding-top: 30px;
+        padding-bottom: 30px;
     }
 }
 
@@ -101,6 +109,15 @@ Author URI: http://www.xpeedstudio.com
     .business_item > h3{
         font-weight: bold;
     }
+
+    .roomy-30 {
+        padding-top: 8px;
+        padding-bottom: 30px;
+    }
+
+    .imghidesmall{
+        display: none;
+    }
 }
 
 
@@ -123,6 +140,15 @@ Author URI: http://www.xpeedstudio.com
     .business_item > h3{
         font-size:14px;
         font-weight: bold;
+    }
+
+    .imghidesmall{
+        display: none;
+    }
+
+    .roomy-30 {
+        padding-top: 0px;
+        padding-bottom:30px;
     }
 
 
