--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,15 +227,16 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 }
 
 .form-control{
-    border-radius: 0px;
-    border:1px solid #ccc;
+    border-radius: 5px;
+    border:1px solid #C3C0C0;
     box-shadow: inset 0 0px 0px rgba(0,0,0,.075);
     width: 100%;
-    height: 50px;
+    height: 40px;
+    color: #000;
 }
 
 .form-control:focus {
-    border-color: #bcefeb;
+    border-color: #428bca;
     outline: 0;
     box-shadow: inset 0 0px 0px rgba(0,0,0,.075),0 0 0px rgba(102,175,233,.6);
 }
