--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -10,6 +10,18 @@
   -webkit-filter: grayscale(0);
 }
 
+.imgclick2{
+  filter: none;
+  -webkit-filter: grayscale(0);
+  -webkit-transition: all .5s ease-in-out;  
+}
+
+.imgclick2:hover{
+  cursor: pointer;
+  filter: gray;
+  -webkit-filter: grayscale(1);
+}
+
 .estexto1{
 	font-size: 1.100rem;
   line-height: 1.575rem;
