--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -125,17 +125,18 @@ hr {
   background: #012a3c;
 }
 .btn {
-  border-width: 0;
-  border-bottom-width: 3px;
-  border-radius: 3px;
+  border-width: 1;
+  border-radius: 10px;
 }
 .btn.btn-primary {
-  background: #ff641b;
-  border-color: #ff641b; border-radius:25px;
+  background: #012a3c;
+  border-color: #012a3c; border-radius:10px;
 }
 .btn.btn-primary:hover,
 .btn.btn-primary:focus {
-  background: #e84a00;
+  background: #F4F6F6;
+  color: #012a3c;
+  font-weight: bold;
 }
 .column-title {
   margin-top: 0;
@@ -317,10 +318,10 @@ ul.nostyle i {
   color: #45aed6;
 }
 #main-slider .slider-inner .btn {
-  margin-top: 20px; background:transparent; border:3px solid #f26522; border-radius:30px;
+  margin-top: 20px; background:transparent; border:3px solid #0FB0C5; border-radius:30px;
 }
 #main-slider .slider-inner .btn.btn-primary{ padding:10px 46px; font-size:22px;}
-#main-slider .slider-inner .btn.btn-primary:hover{ background:#f26522;}
+#main-slider .slider-inner .btn.btn-primary:hover{ background:#0FB0C5; color: #fff; font-weight: normal;}
 #main-slider .owl-prev,
 #main-slider .owl-next {
   position: absolute;
@@ -371,9 +372,45 @@ ul.nostyle i {
 #features .media.service-box:first-child {
   margin-top: 80px;
 }
+
+#nosotros {
+  padding: 87px 0 87px; background: #012a3c;
+}
+#nosotros .btn.btn-primary { font-family: 'Roboto-regular'; font-size:15px; margin-top:20px; padding:10px 30px;}
+
+#nosotros .section-header .section-title:before {
+  content: "";
+  position: absolute;
+  width: 140px;
+  bottom: 0;
+  left: 50%;
+  margin-left: -70px;
+  height: 1px;
+  /*background: #ff641b; // #264861*/
+  background: #fff;
+}
+#nosotros .section-header .section-title:after {
+  content: "";
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  bottom: -11px;
+  left: 50%;
+  margin-left: -12px;
+  border: 5px solid #012a3c;
+  border-radius: 20px;
+  background: #fff;
+}
+
+#nosotros .media-body h3
+{ margin-bottom:15px; font-family:'Raleway', sans-serif; font-size:25px; color:#fff; font-weight: bold;}
+#nostros .media-body p{ color: #F4F6F6; line-height:20px;}
+
+
 #services {
   padding: 87px 0 87px; background: #fff;
 }
+#services .btn.btn-primary { font-family: 'Roboto-regular'; font-size:15px; margin-top:20px; padding:10px 30px;}
 .media.service-box {
   margin: 25px 0; text-align:center;
 }
@@ -406,6 +443,7 @@ ul.nostyle i {
 }
 
 .media-body h4{ margin-bottom:15px; font-family:'Roboto-light'; font-size:22px; color:#454545;}
+.media-body h3{ margin-bottom:15px; font-family:'Roboto-light'; font-size:17px; color:#000000; font-weight: bold;}
 .media-body p{ line-height:20px;}
 .media.service-box:hover .pull-left > i {
 /*  background-image: -moz-linear-gradient(90deg, #2caab3 0%, #2c8cb3 100%);
@@ -798,7 +836,7 @@ ul.nostyle i {
   text-transform: uppercase;
 }
 
-#pricing ul.pricing li.plan-purchase .btn-primary { background:#ff641b; border-radius:30px; margin-top:25px; padding:15px 25px 10px; font-size:18px; font-family:'Roboto-medium';}
+#pricing ul.pricing li.plan-purchase .btn-primary { background:#012a3c; border-radius:30px; margin-top:25px; padding:15px 25px 10px; font-size:18px; font-family:'Roboto-medium';}
 
 #pricing ul.pricing li.plan-header .plan-price span{ font-size:18px; display:block; text-align: center; text-transform:lowercase; font-weight:normal;}
 
@@ -882,11 +920,14 @@ ul.nostyle i {
   text-transform: uppercase;
   color: #45aed6;
 }
-#blog .blog-post.blog-large .entry-title {
+#blog .blog-post.blog-large .entry-title{
   margin-top: 0;
-  font-size: 18px;
+  font-size: 21px;
   line-height: 1;
   margin-bottom: 15px;
+}
+#blog .blog-post.blog-large .entry-title .b{
+  color: #64686d; font-size:18px; text-transform:uppercase; font-weight:normal; font-family: 'Roboto-medium';
 }
 #blog .blog-post.blog-large .entry-title a {
   color: #64686d; font-size:18px; text-transform:uppercase; font-weight:normal; font-family: 'Roboto-medium';
